fix(api): use Stream.toList() and clarify BadRequestException catch in AppConfigService